--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "mern",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
     "client": "node scripts/start-client.js",
     "start": "concurrently \"nodemon server.js\" \"npm run client\"",
     "build": "node scripts/build.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "installDeps": "yarn && cd client && yarn"
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +18,10 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
+    "circular-json": "^0.5.1",
     "express": "^4.15.4",
-    "mongoose": "^4.13.7"
+    "mongoose": "^4.11.7"
   }
 }
